--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Collection Tracker</title>
-    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&Exo+2:wght@900&EB+Garamond:wght@800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&Exo+2:wght@900&family=Roboto:wght@100&family=Montserrat:wght@600;800&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
